admission-controllers/ValidatingAdmissionWebhook/validating_admission_webhook.yml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validating-webhook
  namespace: test
webhooks:
  - name: webhook-server.webhook-demo.svc
    failurePolicy: Fail
    clientConfig:
      service:
        name: test-validations
        namespace: test
        path: /validate/deployments
      # a base64 encoded self signed ca cert is needed because all Admission Webhooks need to be on SSL
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURQekNDQWllZ0F3SUJBZ0lVUk45dVA5VEtEdWNlOEg5MEZ0MCs1ZW9WYWtzd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RXRNQ3NHQTFVRUF3d2tRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJFWlcxdgpJRU5CTUI0WERUSXpNVEl6TURFME1EY3lNRm9YRFRJME1ERXlPVEUwTURjeU1Gb3dMekV0TUNzR0ExVUVBd3drClFXUnRhWE56YVc5dUlFTnZiblJ5YjJ4c1pYSWdWMlZpYUc5dmF5QkVaVzF2SUVOQk1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTBjcWd1R0lYUzhsZlpQM1UydW5vSWpJVi84dVQvVW9wUlBaYgpPNzJKeW45MENh [...]
    rules:
      - apiGroups: ["apps"]
        resources:
          - "deployments"
        apiVersions:
          - "*"
        operations:
          - CREATE
